# cdec

./: configure.ac
training/: Makefile.am
training/feedback_bin/: Makefile.am  feedback_bin.cc
